non-msrv-tests/tests/ui/default.stderr
error: unknown option
 --> tests/ui/default.rs:7:42
  |
7 | struct DefaultOnStruct<T>(#[derive_where(default)] PhantomData<T>);
  |                                          ^^^^^^^

error: `default` is only supported if `Default` is being implemented
  --> tests/ui/default.rs:12:17
   |
12 |     #[derive_where(default)]
   |                    ^^^^^^^

error: required `default` option on a variant if `Default` is being implemented
  --> tests/ui/default.rs:17:1
   |
17 | / #[derive_where(Default)]
18 | | enum MissingDefault<T> {
19 | |     A(PhantomData<T>),
20 | | }
   | |_^

error: multiple `default` options in enum
  --> tests/ui/default.rs:27:17
   |
27 |     #[derive_where(default)]
   |                    ^^^^^^^

error: duplicate `default` option
  --> tests/ui/default.rs:34:26
   |
34 |     #[derive_where(default, default)]
   |                             ^^^^^^^

error: duplicate `default` option
  --> tests/ui/default.rs:42:17
   |
42 |     #[derive_where(default)]
   |                    ^^^^^^^
